Upgrade to Jekyll4.0

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -21,9 +21,20 @@
   </nav>
 </header>
 {{ content }}
-{% if page.previous.url or page.next.url %}
+{% if page.next_in_category or page.previous_in_category %}
 <footer>
-    {% if page.next.url %}<a href="{{ page.next.url | prepend: site.baseurl }}">« {{ page.next.title }}</a>{% else %} <span></span> {% endif %}
-    {% if page.previous.url %}<a href="{{ page.previous.url | prepend: site.baseurl }}">{{ page.previous.title }} »</a>{% else %} <span></span> {% endif %}
+  {% if page.next_in_category.url %}
+    <a href="{{ page.next_in_category.url | prepend: site.baseurl }}">« {{ page.next_in_category.title }}</a>{% else %} <span></span> 
+  {% endif %}
+
+  {% if page.solution %}
+    <a href="{% link {{ page.solution }} %}"> Solution </a> {% else %} <span></span>
+    {{page.solution}}   
+  {% endif %}
+
+  {% if page.previous_in_category.url %}
+    <a href="{{ page.previous_in_category.url | prepend: site.baseurl }}">{{ page.previous_in_category.title }} »</a>{% else %} <span></span> 
+  {% endif %}
+
 </footer>
-{% endif %}
+{% endif %} 
