--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,20 @@ layout: default
 
 <div class="post">
   <div class="post-nav">
-    {% if page.next.url %}
+    <!--{% if page.next.url %}
       <a class="nav-item" href="{{ page.next.url | prepend: site.baseurl }}">&laquo; Prev</a>
     {% endif %}
     {% if page.previous.url %}
       <a class="nav-item" href="{{ page.previous.url | prepend: site.baseurl }}">Next &raquo;</a>
+    {% endif %}-->
+  
+    <!-- {% if page.next_in_category %}
+      <a href="{{page.next_in_category.url}}" class="next-link">Older Post</a>
     {% endif %}
+    {% if page.previous_in_category %}
+      <a href="{{page.previous_in_category.url}}" class="previous-link">Newer Post</a>
+    {% endif %} -->
   </div>
-
   <!-- <header class="post-header">
     <! h1 class="post-title">{{ page.title }}<!/h1>
   <! /header> -->
