--- a/_old_files/basic copy.sass
+++ b/_old_files/basic copy.sass
@@ -4,6 +4,6 @@
 @function reduce ($percent)
   @return rgba(mix(#292929, #fff), $percent / 100)
 
-@import basic1
+@import basic
 @import code
 @import table
