--- a/_sass/basic1.sass
+++ b/_sass/basic1.sass
@@ -52,3 +52,11 @@ img
 
 figure
   margin: 1em 0
+
+.twitter-tweet 
+  display: flex
+  justify-content: center
+  transform: scale(0.9) /* Adjust the scale as needed */
+  transform-origin: center /* Center the transformation origin */
+  margin: 0 auto /* Center the tweet horizontally */
+  width: fit-content /* Ensure the container adapts to the new size */
